--- a/index.html
+++ b/index.html
@@ -36,10 +36,8 @@ title_fr: Acceuil
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>Hi. You're looking at <strong>Helios</strong>.</h2>
-						<p>
-							A (free) responsive site template by <a href="http://html5up.net">HTML5 UP</a>.
-							Built with HTML5/CSS3 and released under the <a href="http://html5up.net/license">CCA</a> license.
+						<h2>Hi. How can I help you?</h2>
+						<p><a href="{{ site.baseurl }}/contact.html" class="button">Get in touch</a>
 						</p>
 					</header>
 				</section>
