--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@ title_fr: Acceuil
 						<article>
 							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Pulvinar sagittis congue</a></h3>
+								<h3><a href="#">Cyber safety</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>Reduce your risk</p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Fermentum sagittis proin</a></h3>
+								<h3><a href="#"></a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>Search engine optimisation</p>
 						</article>
 
 						<article>
@@ -67,7 +67,7 @@ title_fr: Acceuil
 							<header>
 								<h3><a href="#">Sed quis rhoncus placerat</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>Website design and build</p>
 						</article>
 
 						<article>
@@ -75,7 +75,7 @@ title_fr: Acceuil
 							<header>
 								<h3><a href="#">Ultrices urna sit lobortis</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>Improve efficiency</p>
 						</article>
 
 						<article>
@@ -83,7 +83,7 @@ title_fr: Acceuil
 							<header>
 								<h3><a href="#">Varius magnis sollicitudin</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p></p>
 						</article>
 
 						<article>
