--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ title_fr: Acceuil
 						<div class="row">
 
 							<!-- Tweets -->
-								<section class="col-4 col-12-mobile">
+								<!--<section class="col-4 col-12-mobile">
 									<header>
 										<h2 class="icon brands fa-twitter circled"><span class="label">Tweets</span></h2>
 									</header>
@@ -238,10 +238,10 @@ title_fr: Acceuil
 											</article>
 										</li>
 									</ul>
-								</section>
+								</section>-->
 
 							<!-- Posts -->
-								<section class="col-4 col-12-mobile">
+								<section class="col-12 col-12-mobile">
 									<header>
 										<h2 class="icon solid fa-file circled"><span class="label">Posts</span></h2>
 									</header>
@@ -282,7 +282,7 @@ title_fr: Acceuil
 								</section>
 
 							<!-- Photos -->
-								<section class="col-4 col-12-mobile">
+								<!--<section class="col-4 col-12-mobile">
 									<header>
 										<h2 class="icon solid fa-camera circled"><span class="label">Photos</span></h2>
 									</header>
@@ -306,7 +306,7 @@ title_fr: Acceuil
 											<a href="#" class="image fit"><img src="images/pic15.jpg" alt="" /></a>
 										</div>
 									</div>
-								</section>
+								</section>-->
 
 						</div>
 						<hr />
@@ -316,23 +316,24 @@ title_fr: Acceuil
 								<!-- Contact -->
 									<section class="contact">
 										<header>
-											<h3>Nisl turpis nascetur interdum?</h3>
+											<h3>Learn more?</h3>
 										</header>
-										<p>Urna nisl non quis interdum mus ornare ridiculus egestas ridiculus lobortis vivamus tempor aliquet.</p>
+										<p>Follow Faouët Informatique on Facebook for tips and advice, or get in touch.</p>
 										<ul class="icons">
-											<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-											<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
-											<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-											<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
+											<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
+											<li><a href="https://facebook.com/faouetinformatique" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+											<li><a href="{{ site.baseurl }}/contact" class="icon brands fa-envelope-f"><span class="label">Email</span></a></li>
+											<!--<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
+											<!--<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>-->
+											<!--<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>-->
+											<!--<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>-->
 										</ul>
 									</section>
 
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; <script>document.write(new Date().getFullYear())</script> Mark Berthelemy</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 										</ul>
 									</div>
 
