--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ title_fr: Acceuil
 										<ul class="icons">
 											<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
 											<li><a href="https://facebook.com/faouetinformatique" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-											<li><a href="{{ site.baseurl }}/contact" class="icon brands fa-envelope-f"><i class="fa-solid fa-envelope"></i><span class="label">Email</span></a></li>
+											<li><a href="{{ site.baseurl }}/contact" class="icon brands fa-envelope-f"><i class="fas fa-envelope"></i><span class="label">Email</span></a></li>
 											<!--<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
 											<!--<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>-->
 											<!--<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>-->
