--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@ title_fr: Acceuil
 						<article>
 							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Cyber safety</a></h3>
+								<h3><a href="#">Cyber security</a></h3>
 							</header>
-							<p>Reduce your risk</p>
+							<p>Reduce your risk of fraud, data loss and hacking</p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#"></a></h3>
+								<h3><a href="#">Attract customers</a></h3>
 							</header>
 							<p>Search engine optimisation</p>
 						</article>
@@ -65,9 +65,9 @@ title_fr: Acceuil
 						<article>
 							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Sed quis rhoncus placerat</a></h3>
+								<h3><a href="#">Legal compliance</a></h3>
 							</header>
-							<p>Website design and build</p>
+							<p>Cookies, data protection and accessibility</p>
 						</article>
 
 						<article>
