--- a/index.html
+++ b/index.html
@@ -115,14 +115,15 @@ title_fr: Acceuil
 					<div class="reel">
 						
 						{% for post in posts | limit: 10 %}
-
+						{% if post.published %}
 						<article>
-							<a href="#" class="image featured"><img src="{{ post.image }}" alt="{{ post.image_alt }}" /></a>
+							<a href="#" class="image featured"><img src="{{ site.baseurl }}images/{{ post.image }}" alt="{{ post.image_alt }}" /></a>
 							<header>
 								<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
 							</header>
 							<p>{{ post.excerpt }}</p>
 						</article>
+						{% endif %}
 
 						{% endfor %}
 						
