--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@ title_fr: Acceuil
 
 				</div>
 			<!-- Carousel -->
+			<div class="wrapper">
 				<section class="container carousel">
 					<header>
 						<h2>Latest news</h2>
@@ -117,7 +118,7 @@ title_fr: Acceuil
 						{% for post in posts | limit: 10 %}
 						
 						<article>
-							<a href="#" class="image featured"><img src="{{ site.baseurl }}images/{{ post.image }}" alt="{{ post.image_alt }}" /></a>
+							<a href="{{ post.url }}" class="image featured"><img src="{{ site.baseurl }}images/{{ post.image }}" alt="{{ post.image_alt }}" /></a>
 							<header>
 								<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
 							</header>
@@ -131,6 +132,7 @@ title_fr: Acceuil
 
 					</div>
 				</section>
+			</div> <!-- end of wrapper -->
 
 			<!-- Footer -->
 				<div id="footer">
