--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ title_fr: Acceuil
 					</header>
 					<div class="reel">
 						
-						{% for post in posts | limit: 10 %}
+						{% for post in site.posts | limit: 10 %}
 						
 						<article>
 							<a href="{{ post.url }}" class="image featured"><img src="{{ site.baseurl }}images/{{ post.image }}" alt="{{ post.image_alt }}" /></a>
