--- a/index.html
+++ b/index.html
@@ -108,11 +108,8 @@ title_fr: Acceuil
 
 				</div>
 			<!-- Carousel -->
-			<div class="wrapper">
-				<section class="container carousel">
-					<header>
-						<h2>Latest news</h2>
-					</header>
+				<section class="carousel">
+					
 					<div class="reel">
 						
 						{% for post in site.posts | limit: 10 %}
@@ -132,7 +129,6 @@ title_fr: Acceuil
 
 					</div>
 				</section>
-			</div> <!-- end of wrapper -->
 
 			<!-- Footer -->
 				<div id="footer">
