--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@ title_fr: Acceuil
 						{% for post in site.posts | limit: 10 %}
 						
 						<article>
-							<a href="{{ post.url }}" class="image featured"><img src="{{ site.baseurl }}/images/{{ post.image }}" alt="{{ post.image_alt }}" /></a>
+							<a href="{{ site.baseurl }}/{{ post.url }}" class="image featured"><img src="{{ site.baseurl }}/images/{{ post.image }}" alt="{{ post.image_alt }}" /></a>
 							<header>
-								<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+								<h3><a href="{{ site.baseurl }}/{{ post.url }}">{{ post.title }}</a></h3>
 							</header>
 							<p>{{ post.excerpt }}</p>
 						</article>
