--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ title_fr: Acceuil
 						</header>-->
 						<div class="row">
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/button-2076_1280.jpg" alt="Help button on keyboard" /></a>
 								<header>
 									<h3><a href="#">IT problem solving</a></h3>
 								</header>
