--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: About
-image: button-2076_1280.jpg
+image: wordpress-923188_1280.jpg
 image-alt: 
 ---
 <p>Some text about me</p>
