--- a/about.html
+++ b/about.html
@@ -2,6 +2,6 @@
 layout: default
 title: About
 image: wordpress-923188_1280.jpg
-image-alt: 
+image-alt: Person creating a Wordpress website
 ---
 <p>Some text about me</p>
