--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ permalink: /
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="{{ site.url }}/{{ site.baseurl }}" id="logo">{{ site.title }}</a></h1>
+								<h1><a href="{{ site.url }}{{ site.baseurl }}" id="logo">{{ site.title }}</a></h1>
 								<hr />
 								<p>{{ site.description_en }}</p>
 							</header>
