--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ permalink: /
 							<article class="col-4 col-12-mobile special">
 								<a href="#" class="image featured"><img src="images/button-2076_1280.jpg" alt="Help button on keyboard" /></a>
 								<header>
-									<h3><a href="#">IT problem solving</a></h3>
+									<h3><a href="#">IT Support</a></h3>
 								</header>
 								<p>Helping you get the best from your tablets, phones, Chromebooks, laptops and desktops.</p>
 							</article>
