--- a/index.html
+++ b/index.html
@@ -84,21 +84,21 @@ title_fr: Acceuil
 							<article class="col-4 col-12-mobile special">
 								<a href="#" class="image featured"><img src="images/button-2076_1280.jpg" alt="Help button on keyboard" /></a>
 								<header>
-									<h3><a href="#">IT Support</a></h3>
+									<h3><a href="{{ site.baseurl }}/support">IT Support</a></h3>
 								</header>
 								<p>Helping you get the best from your tablets, phones, Chromebooks, laptops and desktops.</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
 								<a href="#" class="image featured"><img src="images/hand-3286887_1280.jpg" alt="" /></a>
 								<header>
-									<h3><a href="#">Websites and communication</a></h3>
+									<h3><a href="{{ site.baseurl }}/websites">Websites and communication</a></h3>
 								</header>
 								<p>Helping you to spread your message simply and clearly.</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
 								<a href="#" class="image featured"><img src="images/digital-marketing-1433427_1280.jpg" alt="" /></a>
 								<header>
-									<h3><a href="#">Information management</a></h3>
+									<h3><a href="{{ site.baseurl }}/info-systems">Information systems</a></h3>
 								</header>
 								<p>Finding and setting up software to help you manage your family, business or association.</p></p>
 							</article>
