--- a/_pages/prices.html
+++ b/_pages/prices.html
@@ -4,9 +4,10 @@ title: Prices
 image: wordpress-923188_1280.jpg
 image-alt: Person creating a Wordpress website
 ---
+{{ page.title }}
 <table>
     <thead>
-{% for row in site.data.prices %}
+    {% for row in site.data.prices %}
         {% if forloop.first %} 
             {% for pair in row %}
             <th>{{ pair[0] }}</th>
