--- a/_pages/prices.html
+++ b/_pages/prices.html
@@ -30,8 +30,8 @@ datatable: prices
 
 <h3>{{ category.name }}</h3>
 {% for item in category.items %}
-<p>{{ item.service }}</p>
-<p>{{ item.price }}</p>
+<p>{{ item.Service }}</p>
+<p>{{ item.Price }}</p>
 {% endfor %}
 {% endfor %}
     
