--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ title_fr: Acceuil
 				</div>
 			<!-- Carousel -->
 				<section class="carousel">
-					
+					<h2>Recent articles</h2>
 					<div class="reel">
 						
 						{% for post in site.posts | limit: 10 %}
