--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ title_fr: Acceuil
 								<header>
 									<h3><a href="{{ site.baseurl }}/support">IT Support</a></h3>
 								</header>
-								<p>Get the best from your tablets, phones, Chromebooks, laptops and desktops.</p>
+								<p>Get the best from your IT investment.</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
 								<a href="#" class="image featured"><img src="images/hand-3286887_1280.jpg" alt="" /></a>
