--- a/index.html
+++ b/index.html
@@ -82,21 +82,21 @@ title_fr: Acceuil
 						</header>-->
 						<div class="row">
 							<article class="col-4 col-12-mobile special">
-								<a href="{{ site.baseurl }}/support" class="image featured"><img src="images/button-2076_1280.jpg" alt="Help button on keyboard" /></a>
+								<a href="{{ site.baseurl }}/support" class="image featured" title="IT Support"><img src="images/button-2076_1280.jpg" alt="Help button on keyboard" /></a>
 								<header>
 									<h3><a href="{{ site.baseurl }}/support">IT Support</a></h3>
 								</header>
 								<p>Get the best from your IT investment.</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="{{ site.baseurl }}/support" class="image featured"><img src="images/hand-3286887_1280.jpg" alt="" /></a>
+								<a href="{{ site.baseurl }}/support" class="image featured" title="Websites and communication"><img src="images/hand-3286887_1280.jpg" alt="" /></a>
 								<header>
 									<h3><a href="{{ site.baseurl }}/support">Websites and communication</a></h3>
 								</header>
 								<p>Spread your message simply and clearly.</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="{{ site.baseurl }}/info-systems" class="image featured"><img src="images/digital-marketing-1433427_1280.jpg" alt="" /></a>
+								<a href="{{ site.baseurl }}/info-systems" class="image featured" title="Information systems"><img src="images/digital-marketing-1433427_1280.jpg" alt="" /></a>
 								<header>
 									<h3><a href="{{ site.baseurl }}/info-systems">Information systems</a></h3>
 								</header>
