--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@ title_fr: Acceuil
 								<p>Get the best from your IT investment.</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="{{ site.baseurl }}/support" class="image featured" title="Websites and communication"><img src="images/hand-3286887_1280.jpg" alt="" /></a>
+								<a href="{{ site.baseurl }}/communication" class="image featured" title="Websites and communication"><img src="images/hand-3286887_1280.jpg" alt="" /></a>
 								<header>
-									<h3><a href="{{ site.baseurl }}/support">Websites and communication</a></h3>
+									<h3><a href="{{ site.baseurl }}/communication">Websites and communication</a></h3>
 								</header>
 								<p>Spread your message simply and clearly.</p>
 							</article>
