--- a/_pages/about.html
+++ b/_pages/about.html
@@ -4,4 +4,16 @@ title: About
 image: wordpress-923188_1280.jpg
 image-alt: Person creating a Wordpress website
 ---
-<p>Some text about me</p>
+<p>I've worked with information technology since the 1980s. It's something that I find natural and relatively painless. But I know that many people find technology difficult. My job is to help you over that pain.</p>
+
+<p>I've been a teacher (of children aged 5-18) and, for the past 20+ years worked in corporate learning and international development.</p>
+
+<p>I'm based near Le Faouët on the border of Morbihan and Finistère, and close to the south-western edge of Côtes-d'Armor.</p>
+
+<p>I'm the editor, photographer and technician behind the <a href="https://nestledinbrittany.org.uk" target="_blank">Nestled in Brittany</a> website - a guide to some of my favourite places in our beautiful region.</p>
+
+<button><a href="{{ site.baseurl }}/communication">Find out more about my website design services</a></p>
+
+
+
+
