--- a/_pages/communication.html
+++ b/_pages/communication.html
@@ -3,5 +3,39 @@ layout: default
 title: Websites and communication
 image: wordpress-923188_1280.jpg
 image-alt: Person creating a Wordpress website
+image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=923188">StockSnap</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=923188">Pixabay</a>
 ---
-<p>Some text about me</p>
+<p>Your website is your way of telling the world about you.</p>
+
+<p>Many small companies and even larger organisations in France, rely on their Facebook page, or free directory listings. Unfortunately, in many cases, they're letting themselves down.</p>
+
+<p>With your own website, you have total control. Your customers, visitors or members will get an experience tailored to them.</p>
+
+<p>You're not reliant on how other providers choose to display your information, and, more importantly, you're not expecting people to give up their privacy just so they can find out about you.</p>
+
+<h3>What to expect</h3>
+
+<p>The websites I create will:</p>
+
+<ul>
+    <li>work well on small and large screens</li>
+    <li>be accessible to as wide an audience as possible</li>
+    <li>reflect your branding</li>
+    <li>be optimised to help people find you on search engines</li>
+    <li>tell your story clearly and succinctly</li>
+</ul>
+
+<h3>Other communication services</h3>
+
+Whilst your website is the central point for people to find you, there are a number of other important aspects to clear, consistent communication:
+
+<ul>
+    <li>An email address that reflects your website address, rather than using free email providers like gmail</li>
+    <li>Automatic connections between your website and your Facebook, LinkedIn, Instagram and other social media accounts</li>
+    <li>Branded newsletters</li>
+    <li>Letter and document templates that reflect your branding</li>
+    <li>A means for customers to contact you, efficiently and securely</li>
+</ul>
+
+<button><a href="{{ site.baseurl }}/contact">Get in touch for a free, initial consultation</a></button>
+
