--- a/_pages/communication.html
+++ b/_pages/communication.html
@@ -37,5 +37,5 @@ Whilst your website is the central point for people to find you, there are a num
     <li>A means for customers to contact you, efficiently and securely</li>
 </ul>
 
-<button><a href="{{ site.baseurl }}/contact">Get in touch for a free, initial consultation</a></button>
+<p><a class="button" href="{{ site.baseurl }}/contact">Get in touch for a free, initial consultation</a></p>
 
