--- a/_pages/communication.html
+++ b/_pages/communication.html
@@ -27,7 +27,7 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
 
 <h3>Other communication services</h3>
 
-Whilst your website is the central point for people to find you, there are a number of other important aspects to clear, consistent communication:
+<p>Whilst your website is the central point for people to find you, there are a number of other important aspects to clear, consistent communication:</p>
 
 <ul>
     <li>An email address that reflects your website address, rather than using free email providers like gmail</li>
