--- a/index.html
+++ b/index.html
@@ -72,40 +72,7 @@ title_fr: Acceuil
 
 				</div>-->
 
-			<!-- Features -->
-				<div class="wrapper style1">
-
-					<section id="features" class="container special">
-						<!--<header>
-							<h2>Heading</h2>
-							<p>Ipsum volutpat consectetur orci metus consequat imperdiet duis integer semper magna.</p>
-						</header>-->
-						<div class="row">
-							<article class="col-4 col-12-mobile special">
-								<a href="{{ site.baseurl }}/support" class="image featured" title="IT Support"><img src="images/button-2076_1280.jpg" alt="Help button on keyboard" /></a>
-								<header>
-									<h3><a href="{{ site.baseurl }}/support">IT Support</a></h3>
-								</header>
-								<p>Get the best from your IT investment.</p>
-							</article>
-							<article class="col-4 col-12-mobile special">
-								<a href="{{ site.baseurl }}/communication" class="image featured" title="Websites and communication"><img src="images/hand-3286887_1280.jpg" alt="" /></a>
-								<header>
-									<h3><a href="{{ site.baseurl }}/communication">Websites and communication</a></h3>
-								</header>
-								<p>Spread your message simply and clearly.</p>
-							</article>
-							<article class="col-4 col-12-mobile special">
-								<a href="{{ site.baseurl }}/info-systems" class="image featured" title="Information systems"><img src="images/digital-marketing-1433427_1280.jpg" alt="" /></a>
-								<header>
-									<h3><a href="{{ site.baseurl }}/info-systems">Information systems</a></h3>
-								</header>
-								<p>Find the right software for your needs.</p></p>
-							</article>
-						</div>
-					</section>
-
-				</div>
+			{% include services.html %}
 			<!-- Carousel -->
 				<section class="carousel">
 					<h2>Recent articles</h2>
