prices and services tweaks

--- a/_pages/prices.html
+++ b/_pages/prices.html
@@ -1,8 +1,9 @@
 ---
 layout: default
 title: Prices
-image: wordpress-923188_1280.jpg
-image-alt: Person creating a Wordpress website
+image: computer-1185626_1280.jpg
+image-alt: Woman using a laptop
+image-credit: Image by <a href="https://pixabay.com/users/janeb13-725943/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1185626">Welcome to All ! ツ</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1185626">Pixabay</a>
 datatable: prices
 ---
 
