--- a/_pages/services.html
+++ b/_pages/services.html
@@ -9,8 +9,19 @@ image-credit: Image by <a href="https://pixabay.com/users/377053-377053/?utm_sou
 
 <p>Computers, tablets, phones, software, websites - they're all intended to make life and work easier, faster, more efficient and more interesting.</p>
 
-<p>But their very flexibility can make things confusing and difficult.</p>
+<p>But their very flexibility can make things confusing and difficult. I can help you through the maze.</p>
 
-<p>I can help you through the maze.</p>
+<p>Services include:</p>
+
+<ul class="two-columns">
+    <li>Choosing equipment - such as laptops, desktops, tablets, wifi routers and printers</li>
+    <li>Setting up equipment - and ensuring you know how to use it</li>
+    <li>Software selection - finding the right software to meet your needs</li>
+    <li>Software training - making sure you can get the best out of your software</li>
+    <li>Website audits - reviewing your website to identify improvements</li>
+    <li>Website creation and management - helping you to communicate with your audience</li>
+</ul>
+
+<h2>Find out more</h2>
 
 {% include services.html %}
