--- a/_pages/services.html
+++ b/_pages/services.html
@@ -5,13 +5,9 @@ image: phone-1869510_1280.jpg
 image-alt: Android phone
 image-credit: Image by <a href="https://pixabay.com/users/377053-377053/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=459196">377053</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=459196">Pixabay</a>
 ---
-<p>My job is to help you get the best out of information technology.</p>
-
 <p>Computers, tablets, phones, software, websites - they're all intended to make life and work easier, faster, more efficient and more interesting.</p>
 
-<p>But their very flexibility can make things confusing and difficult. I can help you through the maze.</p>
-
-<p>Services include:</p>
+<p>But their very flexibility can make things confusing and difficult. I can help you through the maze:</p>
 
 <ul class="two-columns">
     <li>Choosing equipment - such as laptops, desktops, tablets, wifi routers and printers</li>
