--- a/_pages/services.html
+++ b/_pages/services.html
@@ -25,5 +25,9 @@ image-credit: Image by <a href="https://pixabay.com/users/377053-377053/?utm_sou
     </article>
 </div>
 
+<p>Use the links below to find out more.</p>
+
+<p><a class="button" href="{{ site.baseurl }}/contact>Or get in touch for a no obligation quote.</a></p>
+
 
 {% include services.html %}
