--- a/_pages/services.html
+++ b/_pages/services.html
@@ -10,19 +10,19 @@ image-credit: Image by <a href="https://pixabay.com/users/377053-377053/?utm_sou
 <p>But their very flexibility can make things confusing and difficult. I can help you through the maze:</p>
 <div class="row">
     <article class="col-4 col-12-mobile special">
-        <ul>
+        <ul class="no-bullet">
             <li>Choosing equipment - such as laptops, desktops, tablets, wifi routers and printers</li>
             <li>Setting up equipment - and ensuring you know how to use it</li>
         </ul>
     </article>
     <article class="col-4 col-12-mobile special">
-        <ul>
+        <ul class="no-bullet">
             <li>Software selection - finding the right software to meet your needs</li>
             <li>Software training - making sure you can get the best out of your software</li>
         </ul>
     </article>
     <article class="col-4 col-12-mobile special">
-        <ul>
+        <ul class="no-bullet">
             <li>Website audits - reviewing your website to identify improvements</li>
             <li>Website creation and management - helping you to communicate with your audience</li>
         </ul>
