--- a/_pages/services/index.html
+++ b/_pages/services/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Services
+permalink: services
 image: phone-1869510_1280.jpg
 image-alt: Android phone
 image-credit: Image by <a href="https://pixabay.com/users/377053-377053/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=459196">377053</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=459196">Pixabay</a>
