--- a/_pages/services/communication.html
+++ b/_pages/services/communication.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+permalink: services/communication
 title: Websites and communication
 image: wordpress-923188_1280.jpg
 image-alt: Person creating a Wordpress website
