--- a/_pages/services/support.html
+++ b/_pages/services/support.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+permalink: services/support
 title: IT Support
 image: wordpress-923188_1280.jpg
 image-alt: Person creating a Wordpress website
