--- a/_pages/services/communication.html
+++ b/_pages/services/communication.html
@@ -38,5 +38,5 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
     <li>A means for customers to contact you, efficiently and securely</li>
 </ul>
 
-<p><a class="button" href="{{ site.baseurl }}/contact">Get in touch for a free, initial consultation</a></p>
+<p class="center"><a class="button" href="{{ site.baseurl }}/contact">Request a no obligation quote</a></p>
 
