--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ title_fr: Acceuil
 				<section id="banner">
 					<header>
 						<h2>Hi. How can I help you?</h2>
-						<p><a href="{{ site.baseurl }}/contact" class="button">Get in touch</a>
+						<p><a href="{{ site.baseurl }}/services" class="button">Find out how</a>
 						</p>
 					</header>
 				</section>
