--- a/_pages/services/communication.html
+++ b/_pages/services/communication.html
@@ -26,6 +26,27 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
     <li>tell your story clearly and succinctly</li>
 </ul>
 
+<h3>Portfolio</h3>
+
+<h4><a href="http://campingledrennec.com/" target="_blank">Camping le Drennec</a></h4>
+
+<ul class="checkmark">
+    <li>Multi-language</li>
+    <li>Mobile friendly</li>
+    <li>Photo gallery</li>
+    <li>Multiple page templates</li>
+</ul>
+
+<h4><a href="https://www.seanhendicott.com/" target="_blank">Sean Hendicott - heating specialist</a></h4>
+
+<ul class="checkmark">
+    <li>Multi-language</li>
+    <li>Mobile friendly</li>
+    <li>Photo gallery</li>
+    <li>Non-invasive site analytics</li>
+    <li>Single page design</li>
+</ul>
+
 <h3>Other communication services</h3>
 
 <p>Whilst your website is the central point for people to find you, there are a number of other important aspects to clear, consistent communication:</p>
