Add to portfolio

--- a/_pages/services/communication.html
+++ b/_pages/services/communication.html
@@ -47,6 +47,24 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
     <li>Single page design</li>
 </ul>
 
+<h4><a href="https://mark.berthelemy.net" target="_blank"></a></h4>
+
+<ul class="checkmark">
+    <li>Fast loading</li>
+    <li>Mobile friendly</li>
+    <li>Responsive tables</li>
+    <li>Multiple page templates</li>
+</ul>
+
+<h4><a href="https://nestledinbrittany.org.uk" target="_blank">Nestled in Brittany</a></h4>
+
+<ul class="checkmark">
+    <li>Mobile friendly</li>
+    <li>Maps with markers and popups</li>
+    <li>Automatically post to Facebook</li>
+    <li>Searchable</li>
+</ul>
+
 <h3>Other communication services</h3>
 
 <p>Whilst your website is the central point for people to find you, there are a number of other important aspects to clear, consistent communication:</p>
