--- a/_pages/services/communication.html
+++ b/_pages/services/communication.html
@@ -47,7 +47,7 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
     <li>Single page design</li>
 </ul>
 
-<h4><a href="https://mark.berthelemy.net" target="_blank"></a></h4>
+<h4><a href="https://mark.berthelemy.net" target="_blank">Mark Berthelemy - consulting services</a></h4>
 
 <ul class="checkmark">
     <li>Fast loading</li>
