--- a/_pages/services/communication.html
+++ b/_pages/services/communication.html
@@ -30,7 +30,7 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
 
 <h4><a href="http://campingledrennec.com/" target="_blank">Camping le Drennec</a></h4>
 
-<ul class="checkmark">
+<ul class="">
     <li>Multi-language</li>
     <li>Mobile friendly</li>
     <li>Photo gallery</li>
@@ -39,7 +39,7 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
 
 <h4><a href="https://www.seanhendicott.com/" target="_blank">Sean Hendicott - heating specialist</a></h4>
 
-<ul class="checkmark">
+<ul class="">
     <li>Multi-language</li>
     <li>Mobile friendly</li>
     <li>Photo gallery</li>
@@ -49,7 +49,7 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
 
 <h4><a href="https://mark.berthelemy.net" target="_blank">Mark Berthelemy - consulting services</a></h4>
 
-<ul class="checkmark">
+<ul class="">
     <li>Fast loading</li>
     <li>Mobile friendly</li>
     <li>Responsive tables</li>
@@ -58,7 +58,7 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
 
 <h4><a href="https://nestledinbrittany.org.uk" target="_blank">Nestled in Brittany</a></h4>
 
-<ul class="checkmark">
+<ul class="">
     <li>Mobile friendly</li>
     <li>Maps with markers and popups</li>
     <li>Automatically post to Facebook</li>
