--- a/_pages/services/communication.html
+++ b/_pages/services/communication.html
@@ -28,7 +28,9 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
 
 <h3>Portfolio</h3>
 
-<h4><a href="http://campingledrennec.com/" target="_blank">Camping le Drennec</a></h4>
+<h4><a href="https://campingledrennec.com/" target="_blank">Camping le Drennec</a></h4>
+
+<img class="right" src="{{ site.baseurl }}/assets/portfolio/campingledrennec.png" width="400" alt="website screenshot"/>
 
 <ul class="">
     <li>Multi-language</li>
