--- a/_pages/services/communication.html
+++ b/_pages/services/communication.html
@@ -28,44 +28,69 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
 
 <h3>Portfolio</h3>
 
-<h4><a href="https://campingledrennec.com/" target="_blank">Camping le Drennec</a></h4>
 
-<img class="right" src="{{ site.baseurl }}/assets/portfolio/campingledrennec.png" width="400" alt="website screenshot"/>
+<div class="row">
+    <article class="col-6 col-12-mobile special">
+        <h4><a href="https://campingledrennec.com/" target="_blank">Camping le Drennec</a></h4>
+        <ul>
+            <li>Multi-language</li>
+            <li>Mobile friendly</li>
+            <li>Photo gallery</li>
+            <li>Multiple page templates</li>
+        </ul>
+    </article>
+    <article class="col-4 col-12-mobile special">
+        <img src="{{ site.baseurl }}/images/portfolio/campingledrennec.png" width="400" alt="website screenshot"/>
+    </article>
+</div>
 
-<ul class="">
-    <li>Multi-language</li>
-    <li>Mobile friendly</li>
-    <li>Photo gallery</li>
-    <li>Multiple page templates</li>
-</ul>
+<div class="row">
+    <article class="col-6 col-12-mobile special">
+        <h4><a href="https://www.seanhendicott.com/" target="_blank">Sean Hendicott - heating specialist</a></h4>
+        <ul>
+            <li>Multi-language</li>
+            <li>Mobile friendly</li>
+            <li>Photo gallery</li>
+            <li>Non-invasive site analytics</li>
+            <li>Single page design</li>
+        </ul>
+    </article>
 
-<h4><a href="https://www.seanhendicott.com/" target="_blank">Sean Hendicott - heating specialist</a></h4>
+    <article class="col-6 col-12-mobile special">
+    
+    </article>
+</div>
+<div class="row">
+    <article class="col-6 col-12-mobile special">
+        <h4><a href="https://mark.berthelemy.net" target="_blank">Mark Berthelemy - consulting services</a></h4>
 
-<ul class="">
-    <li>Multi-language</li>
-    <li>Mobile friendly</li>
-    <li>Photo gallery</li>
-    <li>Non-invasive site analytics</li>
-    <li>Single page design</li>
-</ul>
+        <ul>
+            <li>Fast loading</li>
+            <li>Mobile friendly</li>
+            <li>Responsive tables</li>
+            <li>Multiple page templates</li>
+        </ul>
+    </article>
+    <article class="col-6 col-12-mobile special">
 
-<h4><a href="https://mark.berthelemy.net" target="_blank">Mark Berthelemy - consulting services</a></h4>
+    </article>
+</div>
+<div class="row">
+    <article class="col-6 col-12-mobile special">
 
-<ul class="">
-    <li>Fast loading</li>
-    <li>Mobile friendly</li>
-    <li>Responsive tables</li>
-    <li>Multiple page templates</li>
-</ul>
+        <h4><a href="https://nestledinbrittany.org.uk" target="_blank">Nestled in Brittany</a></h4>
 
-<h4><a href="https://nestledinbrittany.org.uk" target="_blank">Nestled in Brittany</a></h4>
+        <ul>
+            <li>Mobile friendly</li>
+            <li>Maps with markers and popups</li>
+            <li>Automatically post to Facebook</li>
+            <li>Searchable</li>
+        </ul>
+    </article>
+    <article class="col-6 col-12-mobile special">
 
-<ul class="">
-    <li>Mobile friendly</li>
-    <li>Maps with markers and popups</li>
-    <li>Automatically post to Facebook</li>
-    <li>Searchable</li>
-</ul>
+    </article>
+</div>
 
 <h3>Other communication services</h3>
 
