--- a/_pages/services/communication.html
+++ b/_pages/services/communication.html
@@ -40,7 +40,7 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
         </ul>
     </article>
     <article class="col-4 col-12-mobile special">
-        <img src="{{ site.baseurl }}/images/portfolio/campingledrennec.png" width="400" alt="website screenshot"/>
+        <img class="fit" src="{{ site.baseurl }}/images/portfolio/campingledrennec.png" width="400" alt="website screenshot"/>
     </article>
 </div>
 
