--- a/_pages/services/communication.html
+++ b/_pages/services/communication.html
@@ -40,7 +40,8 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
         </ul>
     </article>
     <article class="col-4 col-12-mobile special">
-        <img class="fit" src="{{ site.baseurl }}/images/portfolio/campingledrennec.png" width="400" alt="website screenshot"/>
+        <a href="https://campingledrennec.com/" target="_blank"><img class="fit" src="{{ site.baseurl }}/images/portfolio/campingledrennec.png" width="400" alt="website screenshot" /></a>
+        <p class="button"><a href="https://campingledrennec.com/" target="_blank">Visit site<br />(opens in a new window)</a></p>
     </article>
 </div>
 
