--- a/_pages/services/communication.html
+++ b/_pages/services/communication.html
@@ -28,20 +28,19 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
 
 <h3>Portfolio</h3>
 
-
+<h4>Camping le Drennec</h4>
 <div class="row">
+    <article class="col-4 col-12-mobile special">
+        <a href="https://campingledrennec.com/" target="_blank"><img class="fit" src="{{ site.baseurl }}/images/portfolio/campingledrennec.png" width="400" alt="website screenshot" /></a>
+        <p><a class="button" href="https://campingledrennec.com/" target="_blank">Visit site</a></p>
+    </article>
     <article class="col-6 col-12-mobile special">
-        <h4><a href="https://campingledrennec.com/" target="_blank">Camping le Drennec</a></h4>
         <ul>
             <li>Multi-language</li>
             <li>Mobile friendly</li>
             <li>Photo gallery</li>
             <li>Multiple page templates</li>
         </ul>
-    </article>
-    <article class="col-4 col-12-mobile special">
-        <a href="https://campingledrennec.com/" target="_blank"><img class="fit" src="{{ site.baseurl }}/images/portfolio/campingledrennec.png" width="400" alt="website screenshot" /></a>
-        <p class="button"><a href="https://campingledrennec.com/" target="_blank">Visit site<br />(opens in a new window)</a></p>
     </article>
 </div>
 
