--- a/_pages/services/communication.html
+++ b/_pages/services/communication.html
@@ -31,7 +31,7 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
 <h4>Camping le Drennec</h4>
 <div class="row">
     <article class="col-4 col-12-mobile special">
-        <a href="https://campingledrennec.com/" target="_blank"><img class="fit" src="{{ site.baseurl }}/images/portfolio/campingledrennec.png" width="400" alt="website screenshot" /></a>
+        <a href="https://campingledrennec.com/" target="_blank"><img class="fit border" src="{{ site.baseurl }}/images/portfolio/campingledrennec.png" width="400" alt="website screenshot" /></a>
         <p><a class="button" href="https://campingledrennec.com/" target="_blank">Visit site</a></p>
     </article>
     <article class="col-6 col-12-mobile special">
