--- a/_pages/services/communication.html
+++ b/_pages/services/communication.html
@@ -28,11 +28,12 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
 
 <h3>Portfolio</h3>
 
+{% include portfolio.html %}
+<hr>
 <h4>Camping le Drennec</h4>
 <div class="row">
     <article class="col-4 col-12-mobile special">
         <a href="https://campingledrennec.com/" target="_blank"><img class="fit border" src="{{ site.baseurl }}/images/portfolio/campingledrennec.png" width="400" alt="website screenshot" /></a>
-        <p><a class="button" href="https://campingledrennec.com/" target="_blank">Visit site</a></p>
     </article>
     <article class="col-6 col-12-mobile special">
         <ul>
@@ -41,12 +42,16 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
             <li>Photo gallery</li>
             <li>Multiple page templates</li>
         </ul>
+        <p><a class="button" href="https://campingledrennec.com/" target="_blank">Visit site</a></p>
     </article>
 </div>
-
+<h4>Sean Hendicott - heating specialist</h4>
 <div class="row">
+   
     <article class="col-6 col-12-mobile special">
-        <h4><a href="https://www.seanhendicott.com/" target="_blank">Sean Hendicott - heating specialist</a></h4>
+        <a href="https://campingledrennec.com/" target="_blank"><img class="fit border" src="{{ site.baseurl }}/images/portfolio/campingledrennec.png" width="400" alt="website screenshot" /></a>
+    </article>
+    <article class="col-6 col-12-mobile special">
         <ul>
             <li>Multi-language</li>
             <li>Mobile friendly</li>
@@ -54,15 +59,18 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
             <li>Non-invasive site analytics</li>
             <li>Single page design</li>
         </ul>
+        <p><a class="button" href="https://www.seanhendicott.com/" target="_blank">Visit site</a></p>
     </article>
 
-    <article class="col-6 col-12-mobile special">
     
-    </article>
 </div>
+<h4>Mark Berthelemy - consulting services</h4>
 <div class="row">
     <article class="col-6 col-12-mobile special">
-        <h4><a href="https://mark.berthelemy.net" target="_blank">Mark Berthelemy - consulting services</a></h4>
+        <a href="https://campingledrennec.com/" target="_blank"><img class="fit border" src="{{ site.baseurl }}/images/portfolio/campingledrennec.png" width="400" alt="website screenshot" /></a>
+    </article>
+    <article class="col-6 col-12-mobile special">
+        <h4>Mark Berthelemy - consulting services</h4>
 
         <ul>
             <li>Fast loading</li>
@@ -70,26 +78,24 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
             <li>Responsive tables</li>
             <li>Multiple page templates</li>
         </ul>
-    </article>
-    <article class="col-6 col-12-mobile special">
-
+        <p><a class="button" href=="https://mark.berthelemy.net" target="_blank">Visit site</a></p>
     </article>
 </div>
+<h4>Nestled in Brittany</h4>
 <div class="row">
     <article class="col-6 col-12-mobile special">
-
-        <h4><a href="https://nestledinbrittany.org.uk" target="_blank">Nestled in Brittany</a></h4>
-
+        <a href="https://nestledinbrittany.org.uk" target="_blank"><img class="fit border" src="{{ site.baseurl }}/images/portfolio/nestledinbrittany.png" width="400" alt="website screenshot" /></a>
+    </article>
+    <article class="col-6 col-12-mobile special">
         <ul>
             <li>Mobile friendly</li>
             <li>Maps with markers and popups</li>
             <li>Automatically post to Facebook</li>
             <li>Searchable</li>
         </ul>
+        <p><a class="button" href=="https://nestledinbrittany.org.uk" target="_blank">Visit site</a></p>
     </article>
-    <article class="col-6 col-12-mobile special">
-
-    </article>
+   
 </div>
 
 <h3>Other communication services</h3>
