--- a/_pages/services/communication.html
+++ b/_pages/services/communication.html
@@ -9,11 +9,12 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
 
 <p>Whilst your <a href="{{ site.baseurl }}/services/websites">website</a> is the central point for people to find you, there are a number of other important aspects to clear, consistent communication:</p>
 
-<ul>An email address that reflects your website address, rather than using free email providers like gmail
-<li>Automatic connections between your website and your Facebook, LinkedIn, Instagram and other social media accounts</li>
-<li>Branded newsletters</li>
-<li>Letter and document templates that reflect your branding</li>
-<li>A means for customers to contact you, efficiently and securely</li>
+<ul>
+    <li>An email address that reflects your website address, rather than using free email providers like gmail</li>
+    <li>Automatic connections between your website and your Facebook, LinkedIn, Instagram and other social media accounts</li>
+    <li>Branded newsletters</li>
+    <li>Letter and document templates that reflect your branding</li>
+    <li>A means for customers to contact you, efficiently and securely</li>
 </ul>
 <p class="center"><a class="button" href="{{ site.baseurl }}/contact">Request a no obligation quote</a></p>
 
