--- a/_pages/services/websites.html
+++ b/_pages/services/websites.html
@@ -26,12 +26,11 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
     <li>tell your story clearly and succinctly</li>
 </ul>
 
+You might want to <a href="{{ site.baseurl }}/portfolio">take a look at my current portfolio</a>.
 
+<hr>
 <p class="center"><a class="button" href="{{ site.baseurl }}/contact">Request a no obligation quote</a></p>
 
 
-<h3>Portfolio</h3>
-
-{% include portfolio.html %}
 
 
