--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -9,5 +9,5 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
 {% include portfolio.html %}
 
 <hr>
-<p class="center"><a class="button" href="{{ site.baseurl }}/contact">Request a no obligation quote</a></p>
+<p class="center"><a class="button" href="{{ site.baseurl }}/services/websites">Find out more about website design services</a></p>
 
