--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -3,6 +3,6 @@ layout: default
 title: Contact
 image: wordpress-923188_1280.jpg
 image-alt: Person creating a Wordpress website
-cta-hide: TRUE
+hide-cta: hide
 ---
 <p>Some text about me</p>
