--- a/_pages/services/websites.html
+++ b/_pages/services/websites.html
@@ -10,6 +10,8 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
 
 <p>Many small companies and even larger organisations in France, rely on their Facebook page, or free directory listings. Unfortunately, in many cases, they're letting themselves down.</p>
 
+<p>You'll still find many websites which do not work on a mobile phone. That's unfortunate, given that <a href="https://www.statista.com/topics/6421/internet-usage-in-france/" target="_blank"> 53% of web traffic in France comes from mobile devices</a>.</p> 
+
 <p>With your own website, you have total control. Your customers, visitors or members will get an experience tailored to them.</p>
 
 <p>You're not reliant on how other providers choose to display your information, and, more importantly, you're not expecting people to give up their privacy just so they can find out about you.</p>
