--- a/_pages/services/strategy.html
+++ b/_pages/services/strategy.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-permalink: services/communication
-title: Communication
+permalink: services/strategy
+title: Strategy
 image: wordpress-923188_1280.jpg
 image-alt: Person creating a Wordpress website
 image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=923188">StockSnap</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=923188">Pixabay</a>
