--- a/_pages/services/strategy.html
+++ b/_pages/services/strategy.html
@@ -2,9 +2,9 @@
 layout: default
 permalink: services/strategy
 title: Strategy
-image: wordpress-923188_1280.jpg
-image-alt: Person creating a Wordpress website
-image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=923188">StockSnap</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=923188">Pixabay</a>
+image: office-594132_1280.jpg
+image-alt: Man writing notes by hand in a notebook
+image-credit: Image by <a href="https://pixabay.com/users/startupstockphotos-690514/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=594132">StartupStockPhotos</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=594132">Pixabay</a>
 ---
 
 <p>Whilst your <a href="{{ site.baseurl }}/services/websites">website</a> is the central point for people to find you, there are a number of other important aspects to clear, consistent communication:</p>
