--- a/_pages/services/support.html
+++ b/_pages/services/support.html
@@ -6,3 +6,6 @@ image: wordpress-923188_1280.jpg
 image-alt: Person creating a Wordpress website
 ---
 <p>Some text about me</p>
+
+{% include services.html %}
+
