--- a/_pages/services/websites.html
+++ b/_pages/services/websites.html
@@ -31,5 +31,6 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
 You might want to <a href="{{ site.baseurl }}/portfolio">take a look at my current portfolio</a>.
 
 
+{% include services.html %}
 
 
