--- a/_pages/services/strategy.html
+++ b/_pages/services/strategy.html
@@ -17,6 +17,7 @@ image-credit: Image by <a href="https://pixabay.com/users/startupstockphotos-690
     <li>A means for customers to contact you, efficiently and securely</li>
 </ul>
 
+<h2>Other services</h2>
 {% include services.html %}
 
 
