--- a/_pages/services/websites.html
+++ b/_pages/services/websites.html
@@ -30,7 +30,7 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
 
 You might want to <a href="{{ site.baseurl }}/portfolio">take a look at my current portfolio</a>.
 
-
+<h2>Other services</h2>
 {% include services.html %}
 
 
