--- a/_pages/services/support.html
+++ b/_pages/services/support.html
@@ -7,5 +7,6 @@ image-alt: Person creating a Wordpress website
 ---
 <p>Some text about me</p>
 
+<h2>Other services</h2>
 {% include services.html %}
 
