--- a/_pages/services/info-systems.html
+++ b/_pages/services/info-systems.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: services/information-systems
+permalink: services/systems
 title: Information systems
 image: wordpress-923188_1280.jpg
 image-alt: Person creating a Wordpress website
