--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -5,7 +5,8 @@ image: wordpress-923188_1280.jpg
 image-alt: Person creating a Wordpress website
 hide-cta: hide
 ---
-<p>Send a message using the form below. All data will be stored in the strictest confidence, and will not be passed to any third party without your permission.</p>
+<p>Send a message using the form below.</p>
+<p>All data will be stored and processed in accordance to our <a href="{{ site.baseurl }}/privacy-policy" target="_blank">privacy policy</a>.</p>
 
 <!-- Note :
    - You can modify the font style and form style to suit your website. 
