--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -102,7 +102,7 @@ hide-cta: hide
       border: 1px solid #c0c6cc;
       color: #c1c1c1;
       text-align: center;
-      font-size: 11px;
+      /*font-size: 11px;*/
       line-height: 16px;
       font-weight: bold;
       border-radius: 50%;
@@ -117,7 +117,7 @@ hide-cta: hide
   .zcwf_lblLeft .zcwf_privacy_txt {
       width: 90%;
       color: rgb(0, 0, 0);
-      font-size: 12px;
+      /*font-size: 12px;*/
       font-family: Arial;
       display: inline-block;
       vertical-align: top;
