--- a/_pages/about.html
+++ b/_pages/about.html
@@ -5,12 +5,49 @@ image: macbook-459196_1280.jpg
 image-alt: Laptop with Google home page showing
 image-credit: Image by <a href="https://pixabay.com/users/377053-377053/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=459196">377053</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=459196">Pixabay</a>
 ---
-<p>I've worked with information technology since the 1980s. It's something that I find natural and relatively painless. But I know that many people find technology difficult. My job is to help you over that pain.</p>
+<p>Faouët Informatique is here to help you choose and use Information Technology.</p>
+    
+<p>Our clients are individual professionals, companies and associations across France and further afield.</p>
 
-<p>I was a teacher (of children aged 5-18) for 7 years and then, for the past 20+ years worked in corporate learning and international development.</p>
+<p>Our lead consultant, Mark Berthelemy, has over 30 years experience in IT, education and training.</p>
 
-<p>My base, near Le Faouët is a perfect central location to provide services into Morbihan, Finistère and Côtes-d'Armor.</p>
+<p>We work with a carefully selected network of professionals, such as graphic designers, software developers and photographers.</p>
 
-<p>I'm the editor, photographer and technician behind the <a href="https://nestledinbrittany.org.uk" target="_blank">Nestled in Brittany</a> website - a guide to some of my favourite places in our beautiful region.</p>
+<article>
+    <header>
+        <h3>Testimonials</h3>
+    </header>
+    <blockquote>
+        <p>"Mark is one of the best contractors I have ever worked with. If you need something delivered he's your man."
+        </p>
+        <p class="attribution">Piers Lea - Chief Strategy Officer at LEO and Learning Technologies Group plc</p>
+    </blockquote>
+    <blockquote>
+        <p>"Mark is a relatively new contact for me however he has impressed me very quickly with his detailed knowledge
+            and
+            passion for his subject. It is rare to find somebody so willing to give their own time, to share experience
+            and
+            knowledge freely. Mark could not be more personable or helpful."</p>
+        <p class="attribution">Claire Finch - HTFT Partnership</p>
+    </blockquote>
+    <blockquote>
+        <p>"Mark was fundamental to the success of our large Moodle upgrade project. He oversaw the key project aspects,
+            including the project controls, requirements gathering and overall delivery. He was adept at bridging the
+            gap
+            between supplier and customer, minimising any conflict. Mark was able to offer a wider input into the
+            project
+            than his specific role from his years of experience in elearning. This was very valuable to us and helped us
+            make some essential decisions very rapidly. Mark brings a pro-active, common-sense approach to all
+            challenges
+            and is able to articulate the most technical of issues to all audiences. If you want your elearning project
+            to
+            be a success speak to Mark!"</p>
+        <p class="attribution">Andrew Jack - Head of Product and Business Development at i-to-i Online TEFL</p>
+    </blockquote>
+</article>
+
+
+
+
 
 
