--- a/_pages/about.html
+++ b/_pages/about.html
@@ -22,6 +22,7 @@ image-credit: Image by <a href="https://pixabay.com/users/377053-377053/?utm_sou
         </p>
         <p class="attribution">Piers Lea - Chief Strategy Officer at LEO and Learning Technologies Group plc</p>
     </blockquote>
+    <div></div>
     <blockquote>
         <p>"Mark is a relatively new contact for me however he has impressed me very quickly with his detailed knowledge
             and
