content and cta

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -6,12 +6,11 @@ image-alt: Laptop with Google home page showing
 image-credit: Image by <a href="https://pixabay.com/users/377053-377053/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=459196">377053</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=459196">Pixabay</a>
 ---
 <p>Faouët Informatique is here to help you choose and use Information Technology.</p>
-    
-<p>Our clients are individual professionals, companies and associations across France and further afield.</p>
+<p>I have over 30 years experience in IT, education, training and project management.</p>
 
-<p>Our lead consultant, Mark Berthelemy, has over 30 years experience in IT, education and training.</p>
+<p>My clients are individual professionals, companies and associations across France, the UK and further afield.</p>
 
-<p>We work with a carefully selected network of professionals, such as graphic designers, software developers and photographers.</p>
+<p>I work with a carefully selected network of professionals, such as graphic designers, software developers and photographers.</p>
 
 <article>
     <header>
