--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@ title_fr: Acceuil
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>Hi. How can we help you?</h2>
-						<p><a href="{{ site.baseurl }}/services" class="button">Find out how</a>
+						<p><a href="{{ site.baseurl }}/services" class="button">Hi. How can I help you?</a>
 						</p>
 					</header>
 				</section>
