--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -6,6 +6,20 @@ image-alt: Person creating a Wordpress website
 hide-cta: hide
 ---
 <p>Request a no obligation quote or get in touch to discuss your needs.</p>
+
+<h3>Key questions</h3>
+
+<p>Please be prepared to answer these questions. Ideally, please put your answers in your initial email.</p>
+
+<ol>
+    <li>How many people (staff and volunteers) work within your organisation?</li>
+    <li>How many people does your organisation directly work with? (Eg.As clients, customers, visitors etc)</li>
+    <li>What is working well for you with regards to IT?</li>
+    <li>What would you like to improve? Why?</li>
+    <li>How will you know you've succeeded?</li>
+    <li>What are your annual budgets for IT and communication?</li>
+</ol>
+
 <div class="row">
     <article class="col-6 col-12-mobile special">
 <header>
