--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@ title_fr: Acceuil
 				</div>
 
 			<!-- Banner -->
-				<section id="banner">
+				<!--<section id="banner">
 					<header>
 						<p><a href="{{ site.baseurl }}/services" class="button">Hi. How can I help you?</a>
 						</p>
 					</header>
-				</section>
+				</section>-->
 
 			
 
